data/all_generated_tests/raw_wast_tests/br_if_ImproperFunctionCallorReturnHandling_1814.wast
;; 5. **Test Description:** Call a function within an `if` block with `br_if` to validate that control flow correctly respects the `if` condition when breaking out to the surrounding function.    - **Constraint:** Ensures the correct handling of `if` conditions and breakouts.    - **Improper Handling:** The branch incorrectly evaluated or the function call improperly placed.

(assert_invalid
  (module
    (func $type-call-in-if-br_if (result i32)
      (if (result i32)
        (i32.const 1)
        (call $dummy) 
        (br_if 0 (i32.const 1))
      )
    )
  )
  "type mismatch"
)